loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: '(' expected but identifier found.
while (sortieTrouvee()==false) {biscuit=0;for (i<- 1 to 5) {avance(); if estSurBiscuit() {biscuit+=1;};};
                                                                         ^Poucet1:2: error: illegal start of simple expression
while (sortieTrouvee()==false) {biscuit=0;for (i<- 1 to 5) {avance(); if estSurBiscuit() {biscuit+=1;};};
                                                                                                      ^